<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".program.MainActivity">

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_product_name"
        android:inputType="textPersonName"
        android:text=""
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_price"
        android:inputType="number"
        android:autofillHints="0" />

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_quantity"
        android:inputType="number"
        android:autofillHints="0" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:text="@string/nome" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/preco" />

    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/quantidade" />

</LinearLayout>

